# BTCLab

./: .gitignore  Backtesting.ipynb  README.md  TrmSoapClient.py  ccxt_market_data.py  config.yaml  crypto.csv  crypto.py  dca.py  dip_buyer.py  exchange.py  main.py  monitor.py  pyproject.toml  requirements.txt  setup.py  strat0.py  strat1.py  utils.py
btclab/: __init__.py  __main__.py  binance.py  btclab.py  buydips.py  cli.py  common.py  config.yaml  crypto.py  data.py  database.py  db.py  dca.py  dips.py  logconf.py  main.py  order.py  telegram.py  testlib.py  testmain.py  users.py  utils.py
btclab/.ipynb_checkpoints/: data-checkpoint.ipynb
components/common/: APIHelper.py  Constants.py  FileHelper.py  LogicHelper.py  NotificationsHelper.py  OrdersHelper.py
notebooks/: BTC_explore.ipynb  Backtesting_consolidado.ipynb  DCA_simple.ipynb  DCA_variable.ipynb  DCA_variable_caidas.ipynb
