[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "btclab"
authors = [{name = "Juan Carlos Velasquez", email = "velasquez.gaviria@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
requires-python = ">=3.9"
dependencies = ["ccxt", "click", "numpy", "pandas", "requests", "retry"]

[project.urls]
Home = "https://github.com/octane64/BTCLab"

[project.scripts]
btclab = "btclab.__main__:main"
